Bug 831303 - Fix the the stop where we start counting the shutdown time.r=ehsan.