toolkit/components/telemetry/Telemetry.cpp
@@ -1997,6 +1997,12 @@ const Module kTelemetryModule = {
 namespace mozilla {
 void
 RecordShutdownStartTimeStamp() {
+#ifdef DEBUG
+  static bool recorded = false;
+  MOZ_ASSERT(!recorded);
+  recorded = true;
+#endif
+
   if (!Telemetry::CanRecord())
     return;
 
